--- a/example1/index.html
+++ b/example1/index.html
@@ -17,6 +17,6 @@
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
         
-        <script src="./example1.js"></script>
+        <script src="./main.js"></script>
     </body>
 </html>
